[package]
name = "ranobe"
version = "0.1.0"
edition = "2021"

[lib]
name = "ranobe"
path = "src/lib.rs"

[[bin]]
name = "ranobe"
path = "src/main.rs"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
console = { version = "0.15.5", features = ["windows-console-colors"]}
fuzzy-matcher = "0.3.7"
lazy_static = "1.4.0"

[profile.release]
lto = true
