[package]
name = "ranobe"
version = "0.1.0"
edition = "2021"

[lib]
name = "ranobe"
path = "src/lib.rs"

[[bin]]
name = "ranobe"
path = "src/main.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-tls = "0.12.0"
clap = { version = "4.1.4", features = ["derive"] }
console = { version = "0.15.5", features = ["windows-console-colors"]}
fuzzy-matcher = "0.3.7"
http-types = "2.12.0"
lazy_static = "1.4.0"
once_cell = "1.17.0"
regex = "1.7.1"
# surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls", "encoding", "middleware-logger"] }
surf = "2.3.2"
termsize = "0.1.6"
tokio = { version = "1.25.0", features = ["full"] }

[profile.release]
lto = true
